--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
+    "cmake.copyCompileCommands": "${workspaceFolder}/build/compile_commands.json",
     "sonarlint.pathToCompileCommands": "${workspaceFolder}/build/compile_commands.json"
 }
