--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,7 @@ cmake_minimum_required(VERSION 3.24)
 
 project(dojo VERSION 1.0.0)
 
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED On)
+
 add_executable(dojo Main.cpp)
