--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,12 +5,13 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "gdb",
-            "request": "launch",
             "name": "Launch Program",
-            "target": "${command:cmake.launchTargetPath}",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${command:cmake.launchTargetPath}",
             "cwd": "${workspaceRoot}",
-            "valuesFormatting": "parseText"
+            "externalConsole": false,
+            "MIMode": "gdb",
         }
     ]
 }
